fix: 컴포넌트 겹침 현상 해결 및 세부 수정 [v1.0.1] (2023-04-24)  (#12)
* Fix: Troubleshooting Footer component overlapping

* Chore: correcting typos (렌 -> 랜)

--- a/src/components/Footer/_index.scss
+++ b/src/components/Footer/_index.scss
@@ -1,8 +1,8 @@
 .footer{
   width: 100%;
   max-width: 650px;
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   padding: 1rem;
   text-align: left;
 
